sumo/tests/netconvert/errors/XML/broken_edge/edge#function__false4/errors.netconvert
Error: Unknown edge function 'xxx' in edge '4'.
Quitting (on error).
